# support-ticket-system

./: .env.example  Dockerfile  Makefile  docker-compose.yml  nginx.conf  pyproject.toml
init-db/: 01-create-tables.sql  02-insert-data.sql
src/: __main__.py  config.py  ioc.py
src/application/interfaces/: database.py
src/application/use_cases/ticket/: create_ticket.py
src/application/use_cases/user/: login_user.py  register_user.py
src/domain/: exceptions.py
src/domain/entities/: message.py  ticket.py  user.py
src/domain/repositories/: message_repository.py  role_repository.py  ticket_repository.py  user_repository.py
src/domain/services/: auth_service.py  password_hasher.py  ticket_service.py
src/domain/utils/: password_hasher.py
src/domain/value_objects/: role.py  status_transition.py  ticket_category.py  ticket_id.py  ticket_status.py  user_id.py
src/infrastructure/: exceptions.py
src/infrastructure/database/: models.py
src/infrastructure/dependencies/: container.py  setup.py
src/infrastructure/dependencies/providers/: __init__.py  db_provider.py  security_provider.py  user_use_cases_provider.py
src/infrastructure/persistence/: models.py  session.py
src/infrastructure/persistence/repositories/: message_repository.py  role_repository.py  ticket_repository.py  user_repository.py
src/infrastructure/repositories/: role_repository.py  user_repository.py
src/infrastructure/security/: argon2_password_hasher.py  bcrypt_password_hasher.py
src/presentation/: admin.py  decorators.py  exceptions.py  request_handlers.py
src/presentation/forms/: create_ticket.py  login_form.py  register_form.py
src/presentation/templates/: base.html  create_ticket.html  home.html  login.html  register.html  success.html  user_tickets.html
src/presentation/views/: admin_tickets.py  auth_views.py  home.py  init_bp.py  support_tickets.py  tickets.py  user_tickets.py
src/presentation/views/user/: create.py  index.py  init_bp.py  ticket_ticket_id.py
